@@ -24,7 +24,7 @@
 		<p class="header">Keyboard Shortcuts</p>
 		<p><a href="keyboard.html">Discover keyboard short cuts for common commands</a></p>
 
-		<p class="header">Support</p>
+		<p class="header">How Do I?</p>
 		<p><a href="faq.html">Frequently Asked Questions, getting support and troubleshooting steps.</a></p>
       </td>
     </tr>
